--- a/test/testcases/auto-test-calc.html
+++ b/test/testcases/auto-test-calc.html
@@ -119,7 +119,7 @@ var expected_failures = [
       { firefox: true },
       { msie: true },
     ],
-    tests: ['Auto generated tests at t=0.5s'],
+    tests: ['Auto generated tests at t=0.5ms'],
     message: 'Floating point issues.',
   }
 ];
