--- a/test/testcases/auto-test-composite-transforms.html
+++ b/test/testcases/auto-test-composite-transforms.html
@@ -65,7 +65,7 @@ limitations under the License.
 var expected_failures = [
   {
     browser_configurations: [{ msie: true }],
-    tests: ['Auto generated tests at t=2s'],
+    tests: ['Auto generated tests at t=2ms'],
     message: 'Floating point issues.',
   }
 ];
