--- a/test/testcases/auto-test-matrix-transforms.html
+++ b/test/testcases/auto-test-matrix-transforms.html
@@ -63,7 +63,7 @@ limitations under the License.
 var expected_failures = [
   {
     browser_configurations: [{ msie: true }],
-    tests: ['Auto generated tests at t=((?!(0.4|0.8|1.20+1|1.6|2))[0-9.]+)s'],
+    tests: ['Auto generated tests at t=((?!(0.4|0.8|1.20+1|1.6|2))[0-9.]+)ms'],
     message: 'Getting weird numbers.',
   }
 ];
