--- a/test/testcases/auto-test-path.html
+++ b/test/testcases/auto-test-path.html
@@ -93,32 +93,32 @@ var expected_failures = [
   }, {
     browser_configurations: [{ firefox: true }],
     tests: [
-      '#anim2 at t=(0|1|2|10|11)s',
-      '#anim3 at t=(0|7|8|10)s',
-      '#anim4 at t=(0|10)s',
+      '#anim2 at t=(0|1|2|10|11)ms',
+      '#anim3 at t=(0|7|8|10)ms',
+      '#anim4 at t=(0|10)ms',
     ],
     message: 'Doesn\'t quite follow path correctly.',
   }, {
     browser_configurations: [{ firefox: true, version: '26|27' }],
     tests: [
-      '#anim2 at t=(7|8)s',
-      '#anim3 at t=6s',
+      '#anim2 at t=(7|8)ms',
+      '#anim3 at t=6ms',
     ],
     message: 'Doesn\'t quite follow path correctly.',
   }, {
     browser_configurations: [{ firefox: true, version: '28|29|30' }],
     tests: [
-      '#anim2 at t=9s',
-      '#anim3 at t=5s',
-      '#anim4 at t=(3|8|9)s',
+      '#anim2 at t=9ms',
+      '#anim3 at t=5ms',
+      '#anim4 at t=(3|8|9)ms',
     ],
     message: 'Doesn\'t quite follow path correctly.',
   }, {
     browser_configurations: [{ msie: true }],
     tests: [
-      '#anim2 at t=(0|1|2|3|4|9|10|11)s',
-      '#anim3 at t=(0|1|3|4|7|8|10|11)s',
-      '#anim4 at t=(0|1|3|9|10|11)s',
+      '#anim2 at t=(0|1|2|3|4|9|10|11)ms',
+      '#anim3 at t=(0|1|3|4|7|8|10|11)ms',
+      '#anim4 at t=(0|1|3|9|10|11)ms',
     ],
     message: 'Doesn\'t quite follow path correctly.',
   }
