--- a/test/testcases/auto-test-perspective-origin.html
+++ b/test/testcases/auto-test-perspective-origin.html
@@ -52,7 +52,7 @@ limitations under the License.
 var expected_failures = [
   {
     browser_configurations: [{ chrome: true, version: '34|35' }],
-    tests: ['tests at t=(1|1.5)s'],
+    tests: ['tests at t=(1|1.5)ms'],
     message: '-webkit-perspective-origin shorthand behaviour is broken: crbug.com/361944',
   }
 ];
