Fix platform expectations

--- a/test/testcases/auto-test-compositor.html
+++ b/test/testcases/auto-test-compositor.html
@@ -39,7 +39,7 @@ var expected_failures = [
       { firefox: true },
       { msie: true },
     ],
-    tests: ['Auto generated tests at t=(1|2|3|4|5|6)ms'],
+    tests: ['Auto generated tests at t=(1|2|3|4|5|6)000ms'],
     message: 'Getting weird numbers in ctm.',
   }
 ];
