--- a/test/testcases/auto-test-path.html
+++ b/test/testcases/auto-test-path.html
@@ -93,15 +93,15 @@ var expected_failures = [
   }, {
     browser_configurations: [{ firefox: true }],
     tests: [
-      '#anim2 at t=(0|1|2|10|11)ms',
-      '#anim3 at t=(0|7|8|10)ms',
-      '#anim4 at t=(0|10)ms',
+      '#anim2 at t=(0|(1|2|10|11)000)ms',
+      '#anim3 at t=(0|(7|8|10)000)ms',
+      '#anim4 at t=(0|10000)ms',
     ],
     message: 'Doesn\'t quite follow path correctly.',
   }, {
     browser_configurations: [{ firefox: true, version: '26|27' }],
     tests: [
-      '#anim2 at t=(7|8)ms',
+      '#anim2 at t=(7|8)000ms',
       '#anim3 at t=6000ms',
     ],
     message: 'Doesn\'t quite follow path correctly.',
@@ -110,15 +110,15 @@ var expected_failures = [
     tests: [
       '#anim2 at t=9000ms',
       '#anim3 at t=5000ms',
-      '#anim4 at t=(3|8|9)ms',
+      '#anim4 at t=(3|8|9)000ms',
     ],
     message: 'Doesn\'t quite follow path correctly.',
   }, {
     browser_configurations: [{ msie: true }],
     tests: [
-      '#anim2 at t=(0|1|2|3|4|9|10|11)ms',
-      '#anim3 at t=(0|1|3|4|7|8|10|11)ms',
-      '#anim4 at t=(0|1|3|9|10|11)ms',
+      '#anim2 at t=(0|(1|2|3|4|9|10|11)000)ms',
+      '#anim3 at t=(0|(1|3|4|7|8|10|11)000)ms',
+      '#anim4 at t=(0|(1|3|9|10|11)000)ms',
     ],
     message: 'Doesn\'t quite follow path correctly.',
   }
