Update test failure expectations for Firefox 31

--- a/test/testcases/auto-test-path.html
+++ b/test/testcases/auto-test-path.html
@@ -106,7 +106,7 @@ var expected_failures = [
     ],
     message: 'Doesn\'t quite follow path correctly.',
   }, {
-    browser_configurations: [{ firefox: true, version: '28|29|30' }],
+    browser_configurations: [{ firefox: true, version: '28|29|30|31' }],
     tests: [
       '#anim2 at t=9000ms',
       '#anim3 at t=5000ms',
