Animate SVG height and circle coordinates
Height was already being animated in CSS animations but not in SVG
animations.

--- a/test/test-generator.html
+++ b/test/test-generator.html
@@ -169,6 +169,9 @@ function findElementsToCheck(rawString){
 
 var svgProperties = {
   'cx': 1,
+  'cy': 1,
+  'height': 1,
+  'r': 1,
   'width': 1,
   'x': 1,
   'y': 1,
